06/04/2011:
	- Changes to allow compilation on Windows with Visual C++ Express 2010.
	  New windows subfolder with missing time definitions and VC solution file.
	  Fixes also include definition of snprintf, log2 and S_ISREG, which are
	  all missing in Windows. Many thanks to Rob "Bubba" Hines for his help in
	  porting.


21/03/2011:
	- Added extra NULL assignment to Task pointer after catch block to avoid
	  problems with uninitialized memory being deleted.
	- Added SIGINT handler for Ctrl-C interruptions with strsignal() to
	  display a more meaningful message.


17/03/2011:
	- Clean-up of signed/unsigned variables in IIPImage.h and KakaduImage.h.


15/03/2011:
	- Added sanity check for requested resolutions and tiles in JTL.cc.
	- Fixed problem with edge tiles and watermarking.
	- Clean-up of error message in TPTImage.cc.


14/03/2011:
	- Fixed problem with standalone mode. Can now bind to an FCGI socket by
	  running iipsrv on the command line with the argument --bind.
	  For example: ./iipsrv.fcgi --bind localhost:9000
	- Fixed memory problem reported by valgrind with 16bit images.
	  Now simply use memcpy instead of re-assigning memory blocks. Changes to
	  JTL.cc, DeepZoom.cc and Zoomify.cc.
	- Added extra buffer overhead during JPEG compression.
	- Minor fixes to buffer copy code in Writer.h.
	- Fixed memory leak in Memcached code - need to explicitly free returned
	  objects!


01/12/2010:
	- Modified Main.cc to not check in Memcached if there has been a
	  If-Modified-Since parameter sent and to not store 304 or error replies.
	  Otherwise we risk to send 304 replies to requests from uncached browsers.


25/11/2010:
	- Removed final CRLF from JTL, Zoomify and DeepZoom requests, which causes
	  problems with http pipelining in firefox.


24/11/2010:
	- Added extra checks to both TPTImage and KakaduImage for whether the
	  requested resolution exists.
	- Added ability to KakaduImage to downsize resolutions that were not generated
	  during encoding.