@@ -47,8 +47,12 @@ RawTile TileManager::getNewTile( int resolution, int tile, int xangle, int yangl
   // Apply the watermark if we have one.
   // Do this before inserting into cache so that we cache watermarked tiles
   if( watermark && watermark->isSet() ){
+
     if( loglevel >= 2 ) insert_timer.start();
-    watermark->apply( ttt.data, image->getTileWidth(), image->getTileHeight(), ttt.channels, ttt.bpc );
+    unsigned int tw = ttt.padded? image->getTileWidth() : ttt.width;
+    unsigned int th = ttt.padded? image->getTileHeight() : ttt.height;
+
+    watermark->apply( ttt.data, tw, th, ttt.channels, ttt.bpc );
     if( loglevel >= 2 ) *logfile << "TileManager :: Watermark applied: " << insert_timer.getTime()
 				 << " microseconds" << endl;
   }
